--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,9 @@
         <div class="project">
             <h3>VR Bow and Arrow Game</h3>
             <div class="project-images">
-                <img src="images/VRGame2.png" alt="VR Bow and Arrow Game 1">
-                <img src="images/VRGame1.png" alt="VR Bow and Arrow Game 2">
-                <img src="images/VRGame.png" alt="VR Bow and Arrow Game 3">
+                <img src="images/VRGame2.PNG" alt="VR Bow and Arrow Game 1">
+                <img src="images/VRGame1.PNG" alt="VR Bow and Arrow Game 2">
+                <img src="images/VRGame.PNG" alt="VR Bow and Arrow Game 3">
             </div>
             <p>A VR game developed in Unity featuring an interactive bow and arrow system. Immerse yourself in an exciting archery experience!</p>
         </div>
@@ -36,9 +36,9 @@
         <div class="project">
             <h3>AI Study Tool</h3>
             <div class="project-images">
-                <img src="images/MCAT1.png" alt="AI Study Tool 1">
-                <img src="images/MCAT2.png" alt="AI Study Tool 2">
-                <img src="images/MCAT3.png" alt="AI Study Tool 3">
+                <img src="images/MCAT1.PNG" alt="AI Study Tool 1">
+                <img src="images/MCAT2.PNG" alt="AI Study Tool 2">
+                <img src="images/MCAT3.PNG" alt="AI Study Tool 3">
             </div>
             <p>A mobile app to help users study for the MCAT Exam. It uses AI to generate questions and explanations, tracks struggling topics, and adjusts the study plan to improve performance.</p>
         </div>
