--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         <div class="project">
             <h3>VR Bow and Arrow Game</h3>
             <div class="project-images">
-                <img src="images/VRGame2.PNG" alt="VR Bow and Arrow Game 1">
+                <img src="images/VRGame2.PNG" alt="VR Image 1 Couldn't Load">
                 <img src="images/VRGame1.PNG" alt="VR Bow and Arrow Game 2">
                 <img src="images/VRGame.PNG" alt="VR Bow and Arrow Game 3">
             </div>
