Fixed Contact Page Styling

--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,13 @@
         <h2>Contact Me</h2>
         <div class="contact-profile">
             <img src="images/profilepic.png" alt="Rowan Ruf" class="profile-img">
-            <h3>Rowan Ruf</h3>
-            <p>Email: <a href="mailto:Rowan.ruf@att.net">Rowan.ruf@att.net</a></p>
-            <p>Profiles:</p>
-            <p><a href="https://www.linkedin.com/in/rowan-ruf-aa02b3335/" target="_blank">LinkedIn</a></p>
-            <p><a href="https://stevens.joinhandshake.com/profiles/nteh6m" target="_blank">Handshake</a></p>
+            <div class="contact-info">
+                <h3>Rowan Ruf</h3>
+                <p>Email: <a href="mailto:Rowan.ruf@att.net">Rowan.ruf@att.net</a></p>
+                <p>Profiles:</p>
+                <p><a href="https://www.linkedin.com/in/rowan-ruf-aa02b3335/" target="_blank">LinkedIn</a></p>
+                <p><a href="https://stevens.joinhandshake.com/profiles/nteh6m" target="_blank">Handshake</a></p>
+            </div>
         </div>
     </section>
 </body>
