--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rowan Ruf - Portfolio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lora:wght@400;700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,20 +25,42 @@
     </div>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>Hi, I'm Rowan Ruf, a passionate Software Engineering student at Stevens Institute of Technology with a minor in Computer Science. Originally from New Jersey, I have always been fascinated by technology, problem-solving, and creative development.
-            My journey began with game development in Unity, where I honed my skills in C# and game design. Over the years, I've expanded my expertise into mobile app development (React Native, JavaScript, OpenAI), Virtual Reality experiences (C#, UnityXR), and even creating this website (html).
-            Beyond coding, I'm currently involved with Engineers Without Borders, where I contribute to real-world engineering challenges such as designing and implementing a new water distribution system for a native community in Peru.</p>
+        <div class="marquee">
+            <div class="marquee-content">
+                <p>Software Engineering Major, Computer Science Minor, Game Developer, Mobile App Developer, YouTuber. Software Engineering Major, Computer Science Minor, Game Developer, Mobile App Developer, YouTuber.</p>
+            </div>
+        </div>
     </section>
     <section id="goals">
         <h2>Goals</h2>
-        <p>My goal is to secure a position in software development where I can apply my programming skills, problem-solving abilities, and creativity to build innovative solutions. Whether it's designing immersive games, creating efficient software solutions, or exploring AI-powered tools, I'm always eager to learn and improve.
-        </p>
+        <p>My goal is to secure a position in software development where I can apply my programming, designing, and engineering skills. Whether it's designing games, creating software solutions, or testing AI-powered tools, I'm always eager to learn and improve.</p>
+        <p>If you believe I would be a good fit for your company, please consider hiring me!</p>
     </section>
     <section id="skills">
         <h2>Technical Skills</h2>
-        <p>Unity, C#, React Native, JavaScript, Java, Python, Html
-        </p>
+        <div class="skills-container">
+            <div class="skill">
+                <img src="images/UnityLogo.png" alt="Unity Logo" class="skill-logo">
+            </div>
+            <div class="skill">
+                <img src="images/CSharpLogo.png" alt="C# Logo" class="skill-logo">
+            </div>
+            <div class="skill">
+                <img src="images/ReactNativeLogo.png" alt="React Native Logo" class="skill-logo">
+            </div>
+            <div class="skill">
+                <img src="images/JavaScriptLogo.png" alt="JavaScript Logo" class="skill-logo">
+            </div>
+            <div class="skill">
+                <img src="images/JavaLogo.png" alt="Java Logo" class="skill-logo">
+            </div>
+            <div class="skill">
+                <img src="images/PythonLogo.png" alt="Python Logo" class="skill-logo">
+            </div>
+            <div class="skill">
+                <img src="images/HTMLLogo.png" alt="HTML Logo" class="skill-logo">
+            </div>
+        </div>
     </section>
 </body>
 </html>
