--- a/projects.html
+++ b/projects.html
@@ -15,32 +15,44 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-
     <header>
-        <h1>Welcome to My Projects</h1>
+        <h1>My Projects</h1>
     </header>
-
     <section class="projects">
-        <!-- VR Bow and Arrow Game -->
         <div class="project">
-            <h3>VR Bow and Arrow Game</h3>
+            <!-- VR Bow and Arrow Game -->
+            <h3><a href="https://github.com/RowanRuf/Think_Fast" target="_blank">Think Fast (VR Game)</a></h3>            
             <div class="project-images">
                 <img src="images/VRGame2.PNG" alt="VR Image 1 Couldn't Load">
                 <img src="images/VRGame1.PNG" alt="VR Bow and Arrow Game 2">
                 <img src="images/VRGame.PNG" alt="VR Bow and Arrow Game 3">
             </div>
             <p>A VR game developed in Unity featuring an interactive bow and arrow system. Immerse yourself in an exciting archery experience!</p>
-        </div>
 
-        <!-- AI Study Tool -->
-        <div class="project">
-            <h3>AI Study Tool</h3>
+            <!-- AI Study Tool -->
+            <h3><a href="https://github.com/RowanRuf/MCAT_Study_Tool" target="_blank">PreCAT (AI Study Tool)</a></h3>
             <div class="project-images">
                 <img src="images/MCAT1.PNG" alt="AI Study Tool 1">
                 <img src="images/MCAT2.PNG" alt="AI Study Tool 2">
                 <img src="images/MCAT3.PNG" alt="AI Study Tool 3">
             </div>
-            <p>A mobile app to help users study for the MCAT Exam. It uses AI to generate questions and explanations, tracks struggling topics, and adjusts the study plan to improve performance.</p>
+            <p>A mobile app made using React Native and JavaScript to help users study for the MCAT Exam. It uses OpenAI API to generate questions and explanations, tracks struggling topics, and adjusts the study plan to improve performance.</p>
+
+            <!-- Multiplayer Spoons Game -->
+            <h3><a href="https://studioz-yt.itch.io/spoons-with-stakes" target="_blank">Spoons With Stakes (Multiplayer Game)</a></h3>
+            <div class="project-images">
+                <img src="images/Spoons1.png" alt="Spoons 1">
+                <img src="images/Spoons2.png" alt="Spoons 2">
+            </div>
+            <p>A 3D Multiplayer Game developed in Unity where you play the classic card game: Spoons.</p>
+            <!-- Game Jam -->
+            <h3><a href="https://studioz-yt.itch.io/fruity-combo" target="_blank">Fruity Combo (Game Jam Winner)</a></h3>
+            <div class="project-images">
+                <img src="images/FruityCombo1.png" alt="Fruity 1">
+                <img src="images/FruityCombo2.png" alt="Fruity 2">
+                <img src="images/FruityCombo3.png" alt="Fruity 3">
+            </div>
+            <p>A 2D Fruit Merge Game developed in 48 hours for Game Jam Gamma, where it won 1st place.</p>
         </div>
     </section>
 
