--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rowan Ruf - Portfolio</title>
+    <link rel="icon" href="images/RR.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lora:wght@400;700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -45,7 +46,7 @@
                 <img src="images/Spoons2.png" alt="Spoons 2">
             </div>
             <p>A 3D Multiplayer Game developed in Unity where you play the classic card game: Spoons.</p>
-            
+
             <!-- Game Jam -->
             <h3><a href="https://studioz-yt.itch.io/fruity-combo" target="_blank">Fruity Combo (Game Jam Winner)</a></h3>
             <div class="project-images">
