--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
     <section id="goals">
         <h2>Goals</h2>
-        <p>My goal is to secure an internship or position in software development or similar fields where I can apply my programming, designing, and engineering skills. Whether it's designing games, creating software solutions, or testing AI-powered tools, I'm always eager to learn and improve.</p>
+        <p>My goal is to secure an internship or position in software development or similar fields where I can apply my programming, designing, and engineering skills. Whether it's developing games, designing websites, or testing AI-powered tools, I'm always eager to learn and improve.</p>
         <p>If you believe I would be a good fit for your company, please consider hiring me!</p>
     </section>
     <section id="skills">
