--- a/projects.html
+++ b/projects.html
@@ -59,13 +59,19 @@
     </section>
 
     <footer>
-        <h2>My Programming Videos</h2>
+        <h2>My Game Development Videos</h2>
         <div class="video-thumbnails">
             <a href="https://www.youtube.com/watch?v=ZLxXAUiZ_TA" target="_blank">
                 <img src="https://img.youtube.com/vi/ZLxXAUiZ_TA/hqdefault.jpg" alt="Video Thumbnail 1">
             </a>
             <a href="https://www.youtube.com/watch?v=lsAlj1BcZG4" target="_blank">
                 <img src="https://img.youtube.com/vi/lsAlj1BcZG4/hqdefault.jpg" alt="Video Thumbnail 2">
+            </a>
+            <a href="https://www.youtube.com/watch?v=qtao0gbyiGs" target="_blank">
+                <img src="https://img.youtube.com/vi/lsAlj1BcZG4/hqdefault.jpg" alt="Video Thumbnail 3">
+            </a>
+            <a href="https://www.youtube.com/watch?v=wTRSLO70XLQ" target="_blank">
+                <img src="https://img.youtube.com/vi/lsAlj1BcZG4/hqdefault.jpg" alt="Video Thumbnail 4">
             </a>
         </div>
         <p><a href="https://www.youtube.com/@StudiozYT" target="_blank">Visit my YouTube channel</a></p>
