--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
                 <img src="images/VRGame1.PNG" alt="VR Bow and Arrow Game 2">
                 <img src="images/VRGame.PNG" alt="VR Bow and Arrow Game 3">
             </div>
-            <p>A VR game developed in Unity featuring an interactive bow and arrow system. Immerse yourself in an exciting archery experience!</p>
+            <p>A VR game developed in Unity featuring an interactive bow and arrow system, responsive head and hand tracking, and more!</p>
 
             <!-- AI Study Tool -->
             <h3><a href="https://github.com/RowanRuf/MCAT_Study_Tool" target="_blank">PreCAT (AI Study Tool)</a></h3>
