added website link button

--- a/projects.html
+++ b/projects.html
@@ -22,14 +22,17 @@
     <section class="projects">
         <div class="project">
             <!-- Mass Email Creator -->
-            <h3><a href="https://github.com/RowanRuf/MassEmailCreator" target="_blank">Mass Email Creator</a></h3>            
+            <h3><a href="https://github.com/RowanRuf/MassEmailCreator" target="_blank">Mass Email Creator</a>
+                <a href="https://rowanruf.github.io/MassEmailCreator/" target="_blank">
+                    <button class="project-button">Try It Out</button>
+                </a>
+            </h3>            
             <div class="project-images">
                 <img src="images/MassEmailCreator1.png" alt="Mass Email Creator Screenshot 1">
                 <img src="images/MassEmailCreator2.png" alt="Mass Email Creator Screenshot 2">
                 <img src="images/MassEmailCreator3.png" alt="Mass Email Creator Screenshot 3">
             </div>
             <p>A website built using React, CSS, and JavaScript. Creates fully personalized emails using placeholders like [name], [image], and [custom1], [custom2], etc., making mass emailing more efficient.</p>            
-            
             <h3><a href="https://github.com/RowanRuf/Think_Fast" target="_blank">Think Fast (VR Game)</a></h3>            
             <div class="project-images">
                 <img src="images/VRGame2.PNG" alt="VR Image 1 Couldn't Load">
